# python

./: 25_09.ipynb  27_09.ipynb  2_10.ipynb  4_10.ipynb  end.ipynb  pyproject.toml  real_estate_data.parquet
